pagination + some warnings